// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<NumberCard /> renders correctly with detail actions 1`] = `
<div
  className="number-card w-100 has-details"
>
  <div
    className="card test-class"
  >
    <div
      className="card-body"
    >
      <h3
        className="card-title d-flex align-items-center justify-content-between"
      >
        <span>
          10
        </span>
        <span
          className="pgn__icon d-flex align-items-center justify-content-center"
        >
          <svg
            aria-hidden={true}
            fill="none"
            focusable={false}
            height={24}
            role="img"
            viewBox="0 0 24 24"
            width={24}
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M12 12.75c1.63 0 3.07.39 4.24.9 1.08.48 1.76 1.56 1.76 2.73V18H6v-1.61c0-1.18.68-2.26 1.76-2.73 1.17-.52 2.61-.91 4.24-.91zM4 13c1.1 0 2-.9 2-2s-.9-2-2-2-2 .9-2 2 .9 2 2 2zm1.13 1.1c-.37-.06-.74-.1-1.13-.1-.99 0-1.93.21-2.78.58A2.01 2.01 0 000 16.43V18h4.5v-1.61c0-.83.23-1.61.63-2.29zM20 13c1.1 0 2-.9 2-2s-.9-2-2-2-2 .9-2 2 .9 2 2 2zm4 3.43c0-.81-.48-1.53-1.22-1.85A6.95 6.95 0 0020 14c-.39 0-.76.04-1.13.1.4.68.63 1.46.63 2.29V18H24v-1.57zM12 6c1.66 0 3 1.34 3 3s-1.34 3-3 3-3-1.34-3-3 1.34-3 3-3z"
              fill="currentColor"
            />
          </svg>
        </span>
      </h3>
      <p
        className="card-text"
      >
        This describes the data!
      </p>
    </div>
  </div>
  <div
    className="card-footer"
  >
    <div
      className="footer-title"
    >
      <button
        aria-controls="footer-body-test-id"
        aria-expanded={false}
        className="toggle-collapse btn-block btn btn-link"
        disabled={false}
        onClick={[Function]}
        onKeyDown={[Function]}
        type="button"
      >
        <div
          className="d-flex justify-content-between align-items-center"
        >
          <div
            className="details-btn-text mr-1"
          >
            Details
          </div>
          <div>
            <span
              className="pgn__icon"
            >
              <svg
                aria-hidden={true}
                fill="none"
                focusable={false}
                height={24}
                role="img"
                viewBox="0 0 24 24"
                width={24}
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M7 10l5 5 5-5H7z"
                  fill="currentColor"
                />
              </svg>
              <span
                className="sr-only"
              >
                Show details
              </span>
            </span>
          </div>
        </div>
      </button>
    </div>
    <div
      className="footer-body mt-1 d-none"
      id="footer-body-test-id"
    >
      <a
        className="btn btn-link"
        href="/action-1"
        onClick={[Function]}
        onKeyDown={[Function]}
      >
        <div
          className="d-flex justify-content-between align-items-center"
        >
          <span
            className="label"
          >
            Action 1
          </span>
        </div>
      </a>
      <a
        className="btn btn-link"
        href="/action-2"
        onClick={[Function]}
        onKeyDown={[Function]}
      >
        <div
          className="d-flex justify-content-between align-items-center"
        >
          <span
            className="label"
          >
            Action 2
          </span>
        </div>
      </a>
    </div>
  </div>
</div>
`;

exports[`<NumberCard /> renders correctly without detail actions 1`] = `
<div
  className="number-card w-100"
>
  <div
    className="card test-class"
  >
    <div
      className="card-body"
    >
      <h3
        className="card-title d-flex align-items-center justify-content-between"
      >
        <span>
          10
        </span>
        <span
          className="pgn__icon d-flex align-items-center justify-content-center"
        >
          <svg
            aria-hidden={true}
            fill="none"
            focusable={false}
            height={24}
            role="img"
            viewBox="0 0 24 24"
            width={24}
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M12 12.75c1.63 0 3.07.39 4.24.9 1.08.48 1.76 1.56 1.76 2.73V18H6v-1.61c0-1.18.68-2.26 1.76-2.73 1.17-.52 2.61-.91 4.24-.91zM4 13c1.1 0 2-.9 2-2s-.9-2-2-2-2 .9-2 2 .9 2 2 2zm1.13 1.1c-.37-.06-.74-.1-1.13-.1-.99 0-1.93.21-2.78.58A2.01 2.01 0 000 16.43V18h4.5v-1.61c0-.83.23-1.61.63-2.29zM20 13c1.1 0 2-.9 2-2s-.9-2-2-2-2 .9-2 2 .9 2 2 2zm4 3.43c0-.81-.48-1.53-1.22-1.85A6.95 6.95 0 0020 14c-.39 0-.76.04-1.13.1.4.68.63 1.46.63 2.29V18H24v-1.57zM12 6c1.66 0 3 1.34 3 3s-1.34 3-3 3-3-1.34-3-3 1.34-3 3-3z"
              fill="currentColor"
            />
          </svg>
        </span>
      </h3>
      <p
        className="card-text"
      >
        This describes the data!
      </p>
    </div>
  </div>
</div>
`;
